# Word_Play

./: .env.sglang  .gitignore  README.md  Word_Play-dev copy.code-workspace  draw.py  follow_action_sequence.py  institution_weights.md  optional_requirements.txt  presets.md  prompt.md  pyproject.toml  refactor_notes.md  setup.py  temp_conversation_formats.md  temp_dev_notes.md
.venv312/: pyvenv.cfg
benchmarks/text_meltingpot/: allelopathic_harvest.py  allelopathic_harvest__open.py  boat_race.py  boat_race__eight_races.py  chemistry__three_metabolic_cycles.py  chemistry__three_metabolic_cycles_with_plentiful_distractors.py  chemistry__two_metabolic_cycles.py  chemistry__two_metabolic_cycles_with_distractors.py  clean_up.py  coins.py  collaborative_cooking.py  collaborative_cooking__asymmetric.py  collaborative_cooking__circuit.py  collaborative_cooking__cramped.py  (+26 more)
docs/: index.html
environments/: test_env_2.py
examples/: boat_race.py  cart_pole.py  cart_pole_env.py  complex_tilemap.py  game_theory_template.py  game_theory_template_configs.py  game_theory_template_env.py  huggingface_local_model.py  line_tracking_1d.py  llm_action_only_goal_line.py  llm_among_us.py  llm_three_agent_communication.py  observation_radius_demo.py  parallelized_agents.py  plot_prisoners_dilemma_rewards.py  prisoners_dilemma.py  prisoners_dilemma_env.py  private_sum_coordination.py  private_sum_coordination_env.py  rendering_demo.py  sglang_inference.py  simple_env_0.py  simple_env_1.py  test_env_2.py  trading_example.py  trading_general_example.py  waystation.py
experiments/: configs.py  debug_inst_weights.py  exp_exec.py  exp_setup.py  graph_results.ipynb  make_test_config.py  old_run_competing_altar_exps.py  old_run_unreliable_altar_exp.py  run_competing_altar_exps.py  run_exp.py  run_exp_sbatch.sh  run_exp_sbatch_deadline_qos.sh  run_price_of_anarchy_exps.py  run_unreliable_altar_exps.py  simple_res_display.ipynb  test_chat_gpt.py  test_complex_env.py  test_ucb.py  test_weighted_majority.py  text_meltingpot_model_sweep.py  unused_constants.json  utility.py
in_progress_work/: README.md
legacy/: environment.py  movement_system_presets.py
legacy_to_incorp/: model_presets.py  observation_presets.py
logs/: openrouter_large.csv  openrouter_small.csv
melting_pot_experiments/: plot_rewards.py  run_policy_comparison.py
scripts/: render_single_point_presets.py
tests/: conftest.py  test_action_batching.py  test_random_action_policy.py  test_rendering_refactor.py
tools/: README.md  dump_replay_log.py  run_sglang_server.sh  setup_sglang_server.sh
word_play/: environment.py  logger.py  model.py
wordplay_inspect/: alter_inspect_task.py  wordplay_inspect_bridge.py
(+310 files in other folders)
