[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "word-play"
version = "2.0"
description = "A package for creating text-based environments."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Andrei Muresanu", email = "andrei.muresanu@uwaterloo.ca" },
]
dependencies = []

[project.optional-dependencies]
# Mirrors ``optional_requirements.txt``. Kept in sync so users can install
# via either ``pip install -r optional_requirements.txt`` or
# ``uv sync --extra <name>`` / ``uv sync --all-extras``.
render = [
    "pygame>=2.5",
]
llm = [
    "openai>=1.40",
]
all = [
    "pygame>=2.5",
    "openai>=1.40",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
